--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="slider-wrapper" tabindex="0">
 
-                <div class="item">
+                <div class="item" @mouseover="stophover" @mouseleave="hoverauto">
                     <img :src="slides[activeGame].image" :alt="img" />
                     <div class="text">
                         <h3>{{slides[activeGame].title}}</h3>
